    during compilation as an error.

- ?/??/????, Integration of the Massive Interface
  + Integration with Massive to provide a portable, simple graphic interface
  to MOSVM applications.

- ?/??/????, Brutal Scanner
  + Added (spawn-scanner), which starts a process which accepts commands to
    scan new hosts, and outputs gathered information.

- ?/??/????, MOSREF Restoration
  * MOSREF now creates binaries for distribution again.
  * MOSREF employs bridges and endpoints, making it more flexible for adding
    new plugins.
  * Added lib/options, a library for constructing Common Lisp named arguments;
    slow but versatile.
  * Modified traceback to also permit tracing back into a string.
  * MOSREF now spawns an eval process on the drone, instead of doing a complete
    spawn every time it wants to eval.  The eval process sends feedback
    asynchronously to the drone, via the bridge.
  * Added lib/cons-filter
  * Added lib/format-filter

- 6/24/2006, Win32 Restoration
  * MOSVM now compiles and operates under win32, with the absence of *stdio*,
    and spawn-command.  Asynchronous I/O under win32 requires a considerable 
    amount of time and effort -- time that is not available to EphSec.
    
    For win32 developers with netcat installed in their PATH, the winrepl
    script will use netcat to fork off a window and spawn a REPL process.

  * Added an optional argument to traceback, a channel to output the traceback
    to.  When omitted, the traceback will be printed, which is the current
    behavior.

  * Fixed a bug with guards where the guard statement's result is emplyed as
    an argument.

  * Modified the REPL to forward tracebacks correctly.

- 6/22/2006, Shell Commands
  * Added (spawn-command path ?arg-list ?env-list) -> stream to primitives. 
    Note that this will not work on windows, since Windows does not make it 
    easy to interact with the input and output of a command.
    
    >> (define x (spawn-command "/bin/cat"))